<resources>
    <string name="app_name" translatable="false">Whistle</string>
    <string name="action_settings">Settings</string>
    <string name="code">Code</string>
    <string name="number">number</string>
    <string name="numberPhoneRegistry">number ex 911111111</string>
    <string name="name">name</string>
    <string name="email">E-mail</string>
    <string name="registry">Registry</string>
    <string name="canceled">Canceled</string>
    <string name="msgCreateAccountAtWhistle">Start an account on Whistle is simple and fast</string>
    <string name="confirm">Confirm</string>
    <string name="msgTypeCode">Enter the code</string>
    <string name="msgConfirmRegistration">Confirm the registration by entering the code</string>
    <string name="profile">Profile</string>
    <string name="status">Status</string>
    <string name="edit">Edit</string>
    <string name="msgTheImageSuccessfullyChanged">The image has been successfully changed</string>
    <string name="msgUpdatingProfilePhoto">Updating her profile photo</string>
    <string name="ddd" translatable="false">DDD</string>
    <string name="welcome">Welcome</string>
    <string name="incorrectData">Incorrect data</string>
    <string name="msgTheCodeIncorrect">The code is incorrect!</string>
    <string name="refresh">Refresh</string>
    <string name="msgRefreshContacts">Refreshing contacts</string>
    <string name="detail">Detail</string>
    <string name="switchAllowViewMyLocation">Allow view my location</string>
    <string name="localization">Localization</string>
    <string name="msgYouNeedGrantAccess">You need to grant access to</string>
    <string name="gps" translatable="false">GPS</string>
    <string name="readContacts">Read Contacts</string>
    <string name="writeStorage">Write Storage</string>
    <string name="readStorage">Read Storage</string>
    <string name="msg_GpsNotFound">Reading does not have a GPS position</string>
    <string name="navigation">Navigation</string>
    <string name="block">Block</string>
    <string name="msgCouldNotFindContact">Could not find the contact</string>
    <string name="msgFreeingLocation">Freeing location</string>
    <string name="msgBlockingLocation">Blocking location</string>
    <string name="country">Country</string>
    <string name="selectCountry">Select Country</string>
    <string name="pleaseSelectCountryOrigin">Please select the country of origin</string>
    <string name="msg_couldNotChangeImage">Could not change the image</string>
</resources>
