<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.MainActivity">
    <item
        android:id="@+id/action_detail"
        android:orderInCategory="20"
        android:title="@string/detail"
        android:icon="@drawable/ic_whistle_24"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_navigation"
        android:orderInCategory="20"
        android:title="@string/navigation"
        android:icon="@drawable/ic_whistle_24"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_block"
        android:orderInCategory="20"
        android:title="@string/block"
        android:icon="@drawable/ic_whistle_24"
        app:showAsAction="never" />
</menu>
