<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:layout_alignParentBottom="true">

            <ImageView
                android:id="@+id/imgWhistle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_whistle_24">
            </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/msgCreateAccountAtWhistle"
                android:id="@+id/textView"
                android:textSize="22dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:id="@+id/linearLayoutLocation">

            <Spinner
                android:id="@+id/spnCountry"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/country"
                android:textColorHint="@color/colorPrimary"
                android:editTextColor="@color/colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:layout_alignParentBottom="true">

            <EditText
                android:id="@+id/txtPrefix"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:hint="@string/ddd"
                android:background="#f3f3f3"
                android:textColor="@color/colorText"
                android:paddingLeft="5dp"
                android:inputType="phone"
                android:layout_marginRight="10dp"
                android:textColorHint="@color/colorTextHint"
                android:maxLength="2"/>

            <EditText
                android:id="@+id/txtNumber"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:hint="@string/numberPhoneRegistry"
                android:background="#f3f3f3"
                android:textColor="@color/colorText"
                android:paddingLeft="5dp"
                android:inputType="phone"
                android:textColorHint="@color/colorTextHint" />

        </LinearLayout>


        <EditText
            android:id="@+id/txtName"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:hint="@string/name"
            android:background="#f3f3f3"
            android:textColor="@color/colorText"
            android:paddingLeft="5dp"
            android:inputType="text"
            android:layout_marginTop="30dp"
            android:textColorHint="@color/colorTextHint" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:hint="@string/email"
            android:background="#f3f3f3"
            android:textColor="@color/colorText"
            android:paddingLeft="5dp"
            android:inputType="textEmailAddress"
            android:layout_marginTop="30dp"
            android:textColorHint="@color/colorTextHint" />

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/btnRegistrySave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/registry"
                android:textColor="#fff"
                android:textSize="13dp"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:background="#13b586"/>

            <Button
                android:id="@+id/btnRegistryCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/canceled"
                android:textColor="#fff"
                android:textSize="13dp"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:background="#13b586"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>